# iv-cloud-gateway

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.arm64  README.md
.github/workflows/: iv-gateway.yaml
cmake/: SubmoduleHelpers.cmake
config/: gateway.yaml
proto/: CMakeLists.txt  vehicle_gateway.proto
src/: CMakeLists.txt  constants.h  gateway.cpp  gateway.h  main.cpp  mqtt_topics.h
src/application/: CMakeLists.txt  trip_orchestrator.cc  trip_orchestrator.h
src/auth_manager/: CMakeLists.txt  auth_manager.cpp  auth_manager.h
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/grpc/: CMakeLists.txt  vehicle_gateway_service.cpp  vehicle_gateway_service.h
src/http_client/: CMakeLists.txt  http_client.cpp  http_client.h
src/infra/: config.h  constants.h
src/mqtt_client/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.h
src/services/: CMakeLists.txt  auth_services.cc  auth_services.h  grpc_server.cc  grpc_server.h  mqtt_router.cc  mqtt_router.h  rpc_dispatcher.cc  rpc_dispatcher.h  stream_tag.h  vehicle_stream_handler.cc  vehicle_stream_handler.h
src/transport/http_client/: CMakeLists.txt  http_client.cpp  http_client.h
src/transport/mqtt_client/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.h
tests/: CMakeLists.txt  test_main.cpp
tests/unit/: http_test.cpp  mqtt_test.cpp  trip_test.cc
